<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/grey">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/title" 
        android:textStyle="bold"/>

    <FrameLayout android:layout_width="fill_parent" 
		android:layout_height="fill_parent">	
	    <LinearLayout
	        android:id="@+id/LinearLayout2"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:gravity="center_vertical"
	        android:orientation="vertical" 
			android:background="@color/blue_grey">
	
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/username"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
		        android:textColor="@color/black" />
		
		    <EditText
		        android:id="@+id/username"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:hint="@string/username">
		
		        <requestFocus />
		    </EditText>
		
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/password"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
		        android:textColor="@color/black"/>
		
		    <EditText
		        android:id="@+id/password"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textPassword" 
		        android:hint="@string/password"/>
		    
		    <TextView
				android:id="@+id/nullid"
		        android:layout_width="30dp"
		        android:layout_height="60dp" />
	
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="0dp"
		        android:gravity="bottom|center_vertical" >
	
		        <TextView
		            android:id="@+id/nullidbtn1"
		            android:layout_width="30dp"
		            android:layout_height="wrap_content" />
	
		        <Button
		            android:id="@+id/login"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:layout_weight="0.13"
		            android:text="@string/login" />
	
		        <TextView
		            android:id="@+id/nullidbtn2"
		            android:layout_width="30dp"
		            android:layout_height="wrap_content" />
	
		        <Button
		            android:id="@+id/register"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_weight="0.13"
		            android:text="@string/register" />
	
		        <TextView
		            android:id="@+id/nullidbtn3"
		            android:layout_width="30dp"
		            android:layout_height="wrap_content" />
		    </LinearLayout>
		    
		</LinearLayout>
		
		<FrameLayout android:layout_width="fill_parent" 
			android:layout_height="fill_parent">				
			<com.sorin.mobilecmd.androidcmd.util.TransparentPanel
				android:id="@+id/loading" 
				android:orientation="vertical"
		   	    android:layout_width="fill_parent"
		       	android:layout_height="fill_parent"
		       	android:gravity="center"
		       	android:padding="1dip"		       	
		       	android:visibility="gone"
		       	android:background="@drawable/bkg">
		       	<ProgressBar style="?android:attr/progressBarStyleSmall"	        	 
		       	 		 android:layout_width="wrap_content"
		       	 		 android:layout_height="wrap_content"        	         	
		   		 		 android:indeterminate="true" />
		    	<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dip"			
					android:textColor="#ffffff" 
					android:text="@string/loading" />
		    </com.sorin.mobilecmd.androidcmd.util.TransparentPanel>		
		</FrameLayout>
	</FrameLayout>
</LinearLayout>